# sp25-Baremetal-IDE

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  run_baremetal_tests.sh  spike-bt.py  spike.cfg
app/: CMakeLists.txt
app/include/: main.h
app/src/: main.c
bearly25-2d-conv/2d-conv-hello/: CMakeLists.txt
bearly25-bmarks/: CMakeLists.txt
bearly25-bmarks/acc-conv/: CMakeLists.txt
bearly25-bmarks/acc-conv/include/: bench_config.h  bench_impl.h  bench_sizes.h
bearly25-bmarks/acc-conv/src/: bench_impl.c  bench_sizes.c  main.c
bearly25-bmarks/bandwidth-bmarks/: CMakeLists.txt
bearly25-bmarks/bandwidth-bmarks/include/: main.h
bearly25-bmarks/bandwidth-bmarks/src/: main.c  membw-bmark-uc.c
bearly25-bmarks/conv-bmarks/: CMakeLists.txt
bearly25-bmarks/conv-bmarks/include/: conv_bench.h  conv_cases.h  main.h
bearly25-bmarks/conv-bmarks/src/: conv_bench.c  conv_cases.c  main.c
bearly25-bmarks/core-v-conv/: CMakeLists.txt
bearly25-bmarks/core-v-conv/include/: bench_config.h  bench_fill.h  bench_impl.h  bench_sizes.h
bearly25-bmarks/core-v-conv/src/: bench_fill.c  bench_impl.c  bench_sizes.c  main.c  vec-conv-i8.S  vec-conv5x5-i8.S
bearly25-bmarks/core-v-conv/src/vec_conv/: vec-conv5x5.S
bearly25-bmarks/core-v-ope/: CMakeLists.txt
bearly25-bmarks/core-v-ope/include/: bench_config.h  bench_fill.h  bench_impl.h  bench_sizes.h
bearly25-bmarks/core-v-ope/src/: bench_fill.c  bench_impl.c  bench_sizes.c  main.c
bearly25-bmarks/example-bmark/: CMakeLists.txt
bearly25-bmarks/example-bmark/src/: main.c
bearly25-bmarks/matmul-rvv-ope/: CMakeLists.txt
bearly25-bmarks/matmul-rvv-ope/include/: bench_cache.h  bench_config.h  bench_kernel.h
bearly25-bmarks/matmul-rvv-ope/src/: bench_cache.c  bench_run.c  i8_i32_matmul.c  main.c
bearly25-bmarks/memory-latency/: CMakeLists.txt
bearly25-bmarks/memory-latency/include/: memlat_addrs.h  memlat_config.h  memlat_core.h  memlat_patterns.h  memlat_tests.h
bearly25-bmarks/memory-latency/src/: main.c  memlat_amat_core.c  memlat_core.c  memlat_l1_l2_dram.c  memlat_noc_bg.c  memlat_patterns.c  memlat_scratch_tcm.c
bearly25-bmarks/ope-bmarks/: CMakeLists.txt
bearly25-bmarks/ope-bmarks/include/: bench_cache.h  bench_config.h  bench_fill.h  bench_impl.h  bench_sizes.h
bearly25-bmarks/ope-bmarks/src/: bench_cache.c  bench_fill.c  bench_impl.c  bench_sizes.c  bench_sweep.c  main.c
bearly25-bmarks/rvv-conv/: CMakeLists.txt
bearly25-bmarks/rvv-conv/include/: bench_config.h  bench_fill.h  bench_impl.h  bench_sizes.h
bearly25-bmarks/rvv-conv/src/: bench_fill.c  bench_impl.c  bench_sizes.c  main.c  vec-conv-i8.S  vec-conv.S  vec-conv5x5-i8.S  vec-conv5x5.S
bearly25-bmarks/rvv-matmul/: CMakeLists.txt
bearly25-bmarks/rvv-matmul-threadlib/: CMakeLists.txt
bearly25-bmarks/rvv-matmul-threadlib/include/: bench_cache.h  bench_config.h  bench_impl.h  bench_kernels.h
bearly25-bmarks/rvv-matmul-threadlib/src/: bench_impl.c  bench_run.c  f32_matmul_rvv.c  i8_i16_matmul_rvv.c  main.c
bearly25-bmarks/rvv-matmul/include/: bench_config.h  bench_kernels.h  bench_sizes.h  data.h
bearly25-bmarks/rvv-matmul/src/: bench_cache.c  bench_impl.c  bench_run.c  bench_sizes.c  f32_matmul_rvv.c  i32_matmul_rvv.c  i8_i32_matmul_rvv.c  i8_i8_matmul_rvv.c  main.c
bearly25-bmarks/saturn-pvirus/: CMakeLists.txt
bearly25-bmarks/tinyspeech-mc/: CMakeLists.txt
bearly25-bmarks/tinyspeech-mc/include/: bench_config.h  main.h  tinyspeech_int8.h  tinyspeech_model.h
bearly25-bmarks/tinyspeech-mc/src/: main.c  tensor.c  tinyspeech_int8.c  tinyspeech_model.c
bearly25-bmarks/tinyspeech-sc/: CMakeLists.txt
bearly25-bmarks/tinyspeech-sc/include/: bench_config.h  tinyspeech_int8.h
bearly25-bmarks/tinyspeech-sc/scripts/: README.md  evaluate_archive_accuracy.py  evaluate_current_weights.py  gen_tinyspeech_subset_headers.py  tinyspeech_pipeline.py
bearly25-bmarks/tinyspeech-sc/src/: main.c
bearly25-demos/borai/: CMakeLists.txt
bearly25-demos/borai-optimized/: CMakeLists.txt  README.md
bearly25-demos/borai-optimized/fp32/include/: hardware.h  main.h
bearly25-demos/borai-optimized/int8/include/: bora_tok8096.h  hardware.h  main.h  (+3 more)
bearly25-demos/borai-optimized/scripts/: bin2array.py
bearly25-demos/borai-test/: CMakeLists.txt  README.md
bearly25-demos/mobilenet-imagenet-quant/: CMakeLists.txt
bearly25-demos/mobilenet-imagenet-quant/scripts/: add_bin_to_header.py  preprocess.py  send_image.sh
bearly25-demos/mobilenet-imagenet-quant/src/: classic_main_int8.c  main_int8.c  model_int8.c
can-test/: CMakeLists.txt
can-test/src/: main.c
convrev_demo/: CMakeLists.txt
convrev_demo/src/: main.c
mfcc-lib/: CMakeLists.txt
mfcc-lib/include/: core_feature_cidu.h  core_feature_dsp.h  core_feature_pmp.h  core_feature_timer.h  core_feature_vector.h  mfcc_driver.h  mfcc_driver_mc.h  mfcc_reference_data.h  mfcc_specialized.h  nmsis_bench.h  nmsis_compiler.h  nmsis_gcc.h  nmsis_iar.h  nmsis_version.h  riscv_common_tables_f16.h  riscv_const_structs_f16.h  riscv_math_types.h
mfcc-lib/include/dsp/: basic_math_functions_f16.h  bayes_functions_f16.h  debug.h  distance_functions.h  distance_functions_f16.h  fast_math_functions.h  interpolation_functions.h  none.h  quaternion_math_functions.h  statistics_functions.h  statistics_functions_f16.h  support_functions.h  support_functions_f16.h  svm_defines.h  utils.h  window_functions.h
mfcc-lib/src/: mfcc_driver.c  mfcc_driver_mc.c
mfcc-lib/src/asm/: riscv_cfft_radix4by2_pre_f16_rvv.S  riscv_mult_f16_rvv.S
testc2c/: CMakeLists.txt
testc2c/include/: main.h
testc2c/src/: main.c
thread-lib/: CMakeLists.txt  hthread.c  hthread.h  htread.h  old_hthread.c  old_hthread.h
vec-nn/: CMakeLists.txt
vec-nn/include/: layers.h
vec-nn/src/layers/: conv1x1.c  conv2D.c  dwconv2D.c  fully_connected.c  fully_connected_f32.c  maxpool.c  quantize.c  relu6.c  residual_add.c  softmax.c  transpose.c
whisper/: CMakeLists.txt  file_to_c_data.py
whisper/cmake/: FindThreads.cmake
whisper/include/: whisper_model_data.h
whisper/src/: main.cpp
whisper/whisper_overrides/: model.cpp  time.c
(+561 files in other folders)
