add_subdirectory(ope-bmarks)
add_subdirectory(memory-latency)
add_subdirectory(core-v-ope)
add_subdirectory(rvv-conv)
add_subdirectory(acc-conv)
add_subdirectory(conv-bmarks)
add_subdirectory(example-bmark)
add_subdirectory(saturn-pvirus)
add_subdirectory(rvv-matmul)
if (THREAD_LIB)
  add_subdirectory(rvv-matmul-threadlib)
endif()
add_subdirectory(matmul-rvv-ope)
add_subdirectory(bandwidth-bmarks)
