add_subdirectory(ope-bmarks)
add_subdirectory(memory-latency)
add_subdirectory(core-v-ope)
add_subdirectory(rvv-conv)
add_subdirectory(acc-conv)
add_subdirectory(conv-bmarks)
add_subdirectory(example-bmark)
add_subdirectory(saturn-pvirus)
add_subdirectory(rvv-matmul)
if (THREAD_LIB)
  add_subdirectory(rvv-matmul-threadlib)
endif()
add_subdirectory(matmul-rvv-ope)
add_subdirectory(bandwidth-bmarks)
option(BEARLY25_BMARKS_ENABLE_TINYSPEECH_SC "Enable tinyspeech-sc benchmark target" ON)
option(BEARLY25_BMARKS_ENABLE_TINYSPEECH_MC "Enable tinyspeech-mc benchmark target (requires THREAD_LIB)" ON)

if (BEARLY25_BMARKS_ENABLE_TINYSPEECH_SC)
  add_subdirectory(tinyspeech-sc)
endif()

if (BEARLY25_BMARKS_ENABLE_TINYSPEECH_MC AND THREAD_LIB)
  add_subdirectory(tinyspeech-mc)
endif()
